--- a/index.html
+++ b/index.html
@@ -9,7 +9,18 @@
     <script src="EnableTorus_Matic.js"></script>
 </head>
 <body>
-    <h1>TorusWithMatic</h1>
-	<p>対応ブラウザ：chrome + torus</p>
+    <h1>NFT年賀状送信機 on Matic Network</h1>
+    <p>対応ブラウザ：chrome + torus</p>
+    <p>F12キーを押してエラーの有無を確認(赤色がエラーです)</p><br><br>
+    <div>↓ブロックチェーンから取得したname関数の結果</div>
+    <p id="id3">トラブルが起きています</p>
+    <div>↓ブロックチェーンから取得したsymbol関数の結果</div>
+    <p id="idn">トラブルが起きています</p>
+    <br><br>
+    <p>setnumber関数の呼び出し(ガス代がかかります)</p>
+    <input type="number" name="toBlockChain" id="id100"><input type="button" value="トランザクション送信"
+        onclick="myButtonClicked()">
 </body>
+	
+	
 </html>
