--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>TorusWithMatic</title>
     <script src="https://cdn.jsdelivr.net/npm/web3@1.2.7/dist/web3.min.js" integrity="sha256-9rSwSMn4GDjf9FcHmJSvdiKGrk+mNIUmM4ltFDu3MUU=" crossorigin="anonymous"></script>
     <script src="EnableTorus_Matic.js"></script>
+    <script src="writer.js"></script>
 </head>
 <body>
     <h1>NFT年賀状送信機 on Matic Network</h1>
