--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <p id="idn">トラブルが起きています</p>
     <br><br>
     <p>setnumber関数の呼び出し(ガス代がかかります)</p>
-    <input type="number" name="toBlockChain" id="id100"><input type="button" value="トランザクション送信"
+    <input type="text" name="toBlockChain" id="id100"><input type="number" name="toBlockChain" id="tid"><input type="button" value="トランザクション送信"
         onclick="myButtonClicked()">
 </body>
 	
