--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div>↓ブロックチェーンから取得したsymbol関数の結果</div>
     <p id="idn">トラブルが起きています</p>
     <br><br>
-    <p>setnumber関数の呼び出し(ガス代がかかります)</p>
+    <p>safeTransferFrom関数の呼び出し(ガス代がかかります)</p>
     <input type="text" name="toBlockChain" id="id100"><input type="number" name="toBlockChain" id="tid"><input type="button" value="トランザクション送信"
         onclick="myButtonClicked()">
 </body>
