--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <h1>NFT年賀状送信機 on Matic Network</h1>
     <p>対応ブラウザ：chrome + torus</p>
-    <p>F12キーを押してエラーの有無を確認(赤色がエラーです)</p><br><br>
+    <p>F12キーを押してエラーの有無を確認(赤色がエラーです)</p>
     <p>safeTransferFrom関数の呼び出し(ガス代がかかります)</p>
 　　<p>左：送信先アドレス、右：NFT番号</p>
     <input type="text" name="toBlockChain" id="id100"><input type="number" name="toBlockChain" id="tid"><input type="button" value="トランザクション送信"
