--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 　　<p>左：送信先アドレス、右：NFT番号</p>
     <input type="text" name="toBlockChain" id="id100"><input type="number" name="toBlockChain" id="tid"><input type="button" value="トランザクション送信"
         onclick="myButtonClicked()">
+	
+    <img src="https://raw.githubusercontent.com/nandemotoken/New-Years-Card-Transfer/gh-pages/assets/img/otukarehitoiki1.jpg">
 </body>
 	
 	
